The final version of third task